--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/registration.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/registration.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link rel="stylesheet" type="text/css"
-  th:href="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />
+  th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
 
 <title>User Registration</title>
 </head>
@@ -119,8 +119,8 @@
   </div>
 
   <script type="text/javascript"
-     th:src="@{https://cdn.jsdelivr.net/webjars/org.webjars/jquery/3.2.1/jquery.min.js/}"></script>
+     th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
   <script type="text/javascript"
-     th:src="@{https://cdn.jsdelivr.net/webjars/org.webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+     th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 </body>
 </html>
