Security error handling and starting Unit test

--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/addcase.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/addcase.html
@@ -217,7 +217,7 @@
 							<tr>
 
 								<td>
-									<dt for="contactNo">Date of Discharge:</dt><input type="text"
+									<dt for="contactNo">Insurance Contact No:</dt><input type="text"
 										th:field="*{primaryInsurance.contactNo}" class="form-control" required=""
 										placeholder="Insurance Contact No">
 								</td>
