--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/doctorcases.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/doctorcases.html
@@ -76,7 +76,7 @@
 													<td th:text="${cases.patient.lastName}" />
 													<td th:text="${cases.diagnosis}" />
 													<td th:text="${cases.dateOfAdmission}" />
-													<td> <a th:href="@{/cases/update/{id}(id=${cases.id})}"
+													<td> <a th:href="@{/cases/docupdate/{id}(id=${cases.id})}"
 															class="btn btn-info"><i class="fa fa-edit"></i></a>
 
 												</tr>
