--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/viewcase.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/viewcase.html
@@ -196,7 +196,8 @@
 
 							<tr>
 
-								<td><dt for="attendingDoctorName">Attending Doctor Name:</dt><input type="text" th:field="*{attendingDoctorName}" class="form-control"
+								<td><dt for="attendingDoctorName">Attending Doctor Name:</dt>
+								<input disabled="true" type="text" th:field="*{attendingDoctorName}" class="form-control"
 										required="" placeholder="Attending Doctor Name"></td>
 							</tr>
 							<tr>
