--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/doctor/add.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/doctor/add.html
@@ -60,7 +60,7 @@
 							<tr>
 
 								<td><br><dt for="email">Email:</dt><input th:field="*{email}" class="form-control" required=""
-										placeholder="Doctor Email" /></td>
+										placeholder="Doctor Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"/></td>
 							</tr>
 
 							<tr>
