--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/doctor/update.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/doctor/update.html
@@ -65,7 +65,7 @@
 
 								<td><br>
 									<dt for="email">Email:</dt><input th:field="*{email}"
-										class="form-control" required="" placeholder="Doctor Email" />
+										class="form-control" required="" placeholder="Doctor Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"/>
 								</td>
 							</tr>
 
