--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/fragments/userpage.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/fragments/userpage.html
@@ -11,7 +11,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 			<div class="container">
-				<a class="navbar-brand" th:href="@{/index}"><i class="flaticon-pharmacy"
+				<a class="navbar-brand" th:href="@{/}"><i class="flaticon-pharmacy"
 						style="color:#30969c;"></i><span style="color:#30969c;"><strong>Physician</strong></span>
 					<strong>Advisor</strong></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
@@ -21,7 +21,7 @@
 
 				<div class="collapse navbar-collapse" id="ftco-nav">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a th:href="@{/index}" class="nav-link"><strong>Home</strong></a>
+						<li class="nav-item"><a th:href="@{/}" class="nav-link"><strong>Home</strong></a>
 						</li>
 						<li class="nav-item"><a th:href="@{/about}" class="nav-link"><strong>About</strong></a></li>
 						<li class="nav-item"><a th:href="@{/contact}" class="nav-link"><strong>Contact</strong></a>
@@ -111,7 +111,6 @@
 						<ul class="list-unstyled">
 							<li><a href="#" class="py-2 d-block">Home</a></li>
 							<li><a href="#" class="py-2 d-block">About</a></li>
-							<li><a href="#" class="py-2 d-block">Hospitals</a></li>
 							<li><a href="#" class="py-2 d-block">Doctors</a></li>
 							<li><a href="#" class="py-2 d-block">Contact</a></li>
 						</ul>
@@ -122,12 +121,10 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St., San
-										Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St., Fake, California, USA</span></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 234 3929210</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">info@domain.com</span></a></li>
 							</ul>
 						</div>
 					</div>
