--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/doctors.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/doctors.html
@@ -27,7 +27,8 @@
 			<div class="row no-gutters slider-text align-items-center justify-content-center"
 				data-scrollax-parent="true">
 				<div class="col-md-8 ftco-animate text-center">
-					<p class="breadcrumbs"><span class="mr-2"><a th:href="@{/index}">Home</a></span> <span>Doctors</span>
+					<p class="breadcrumbs"><span class="mr-2"><a th:href="@{/index}">Home</a></span>
+						<span>Doctors</span>
 					</p>
 					<h1 class="mb-3 bread">Well Experienced Doctors</h1>
 				</div>
@@ -35,219 +36,221 @@
 		</div>
 	</div>
 	<section class="ftco-section">
-    	<div class="container">
-        <div class="row">
-        	<div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-1.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Neurologist</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-1.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Neurologist</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-2.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Pediatrician</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-2.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Pediatrician</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-3.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Ophthalmologist</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-3.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Ophthalmologist</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-4.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Pulmonologist</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-4.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Pulmonologist</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/11480871-senior-handsome-man-doctor.webp);">
+								<div class="box">
+									<h2>Aldin Powell</h2>
+									<p>Neurologist</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									
+									<div class="name align-self-center">Aldin Powell <span
+											class="position">Neurologist</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/dr-d-crossed-arms1023100979.jpg);">
+								<div class="box">
+									<h2>Clair Perkins</h2>
+									<p>Pediatrician</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="name align-self-center">Clair Perkins<span
+											class="position">Pediatrician</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/TR1_03-Manish_0335_R1.avif);">
+								<div class="box">
+									<h2>Manish Kumar</h2>
+									<p>Ophthalmologist</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="name align-self-center">Manish Kumar<span
+											class="position">Ophthalmologist</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/indian-doctor-woman-23462721.jpg);">
+								<div class="box">
+									<h2>Lara Dutta </h2>
+									<p>Pulmonologist</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									
+									<div class="name align-self-center">Lara Dutta <span
+											class="position">Pulmonologist</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
 
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-1.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Neurologist</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-1.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Neurologist</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-2.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Pediatrician</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-2.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Pediatrician</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-3.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Ophthalmologist</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-3.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Ophthalmologist</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-2">
-	            <div class="flipper">
-	              <div class="front" style="background-image: url(../images/doctor-4.jpg);">
-	                <div class="box">
-	                  <h2>Aldin Powell</h2>
-	                  <p>Pulmonologist</p>
-	                </div>
-	              </div>
-	              <div class="back">
-	                <!-- back content -->
-	                <blockquote>
-	                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem&rdquo;</p>
-	                </blockquote>
-	                <div class="author d-flex">
-	                  <div class="image mr-3 align-self-center">
-	                    <div class="img" style="background-image: url(../images/doctor-4.jpg);"></div>
-	                  </div>
-	                  <div class="name align-self-center">Aldin Powell <span class="position">Pulmonologist</span></div>
-	                </div>
-	              </div>
-	            </div>
-	          </div> <!-- .flip-container -->
-	        </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col text-center">
-            <div class="block-27">
-              <ul>
-                <li><a href="#">&lt;</a></li>
-                <li class="active"><span>1</span></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">&gt;</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-    	</div>
-    </section>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/doctor-1.jpg);">
+								<div class="box">
+									<h2>Aldin Powell</h2>
+									<p>Neurologist</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="name align-self-center">Aldin Powell <span
+											class="position">Neurologist</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/doctor-2.jpg);">
+								<div class="box">
+									<h2>Aldin Powell</h2>
+									<p>Pediatrician</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="name align-self-center">Aldin Powell <span
+											class="position">Pediatrician</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/doctor-3.jpg);">
+								<div class="box">
+									<h2>Aldin Powell</h2>
+									<p>Ophthalmologist</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="name align-self-center">Aldin Powell <span
+											class="position">Ophthalmologist</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+				<div class="col-md-6 col-lg-3 ftco-animate">
+					<div class="block-2">
+						<div class="flipper">
+							<div class="front"style="background-image: url(../images/doctor-4.jpg);">
+								<div class="box">
+									<h2>Aldin Powell</h2>
+									<p>Pulmonologist</p>
+								</div>
+							</div>
+							<div class="back">
+								<!-- back content -->
+								<blockquote>
+									<p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is
+										an almost unorthographic life One day however a small line of blind text by the
+										name of Lorem&rdquo;</p>
+								</blockquote>
+								<div class="author d-flex">
+									<div class="name align-self-center">Aldin Powell <span
+											class="position">Pulmonologist</span></div>
+								</div>
+							</div>
+						</div>
+					</div> <!-- .flip-container -->
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col text-center">
+					<div class="block-27">
+						<ul>
+							<li><a href="#">&lt;</a></li>
+							<li class="active"><span>1</span></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#">&gt;</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<div th:replace="fragments/userpage :: subscribe"></div>
 
 	<div th:replace="fragments/userpage :: footer"></div>
