--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/hospital/updatehospital.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/hospital/updatehospital.html
@@ -72,7 +72,7 @@
 
 
 								<td><br><input th:field="*{address.state}" class="form-control" required=""
-										placeholder="State" title="Two letter US State code"pattern="^((A[LKZR])|(C[AOT])|(D[EC])|(FL)|(GA)|(HI)|(I[DLNA])|(K[SY])|(LA)|(M[EDAINSOT])|(N[EVHJMYCD])|(O[HKR])|(PA)|(RI)|(S[CD])|(T[NX])|(UT)|(V[TA])|(W[AVIY]))$/></td>
+										placeholder="State" title="Two letter US State code"pattern="^((A[LKZR])|(C[AOT])|(D[EC])|(FL)|(GA)|(HI)|(I[DLNA])|(K[SY])|(LA)|(M[EDAINSOT])|(N[EVHJMYCD])|(O[HKR])|(PA)|(RI)|(S[CD])|(T[NX])|(UT)|(V[TA])|(W[AVIY]))$"/></td>
 							</tr>
 							<tr>
 
