Final with bug fixes

--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/hospital/updatehospital.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/hospital/updatehospital.html
@@ -34,7 +34,7 @@
 				<h3 style="color:#30969c; margin-top: 20px" align="center">Update Hospital</h3>
 
 				<div>
-					<form action="#" th:action="@{/hospital/updatehospital}" th:object="${hospital}" method="POST">
+					<form action="#" th:action="@{/hospital/save}" th:object="${hospital}" method="POST">
 
 						<table align="center" width=40%>
 
