--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/viewcase.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/cases/viewcase.html
@@ -34,7 +34,7 @@
 				<h3 style="color:#30969c; margin-top: 10px" align="center">View Case</h3>
 
 				<div>
-					<form action="#" th:action="@{/cases/viewcase}" th:object="${cases}" method="GET">
+					<form action="#" th:action="@{/cases/usercases}" th:object="${cases}" method="GET">
 
 						<table align="center" width=50%>
 						<tr>
