--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/index.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
 				data-scrollax-parent="true">
 				<div class="col-md-8 ftco-animate text-center">
 					<h4 class="mb-4">Caring for Life</h4>
-					<h1>Leading the Way in Medical Excellencee</h1>
+					<h1>Leading the Way in Medical Excellence</h1>
 				</div>
 			</div>
 		</div>
