--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/fragments/userpage.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/fragments/userpage.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>Userpage</title>
+<head th:fragment="headerfragment">
+    <title th:include=":: #pageTitle">Layout Generic Title</title>
+	<meta charset="utf-8">	
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<script src="https://kit.fontawesome.com/4d45c4ec1e.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/ionicons.min.css">
+    <link rel="stylesheet" href="../css/flaticon.css">
+	<link rel="stylesheet" href="../css/icomoon.css">
+	<link rel="stylesheet" href="../css/style.css">
+	
+	
 </head>
-
 <body>
 <!--header-->
 	<header>
@@ -140,6 +152,27 @@
 			</div>
 		</div>
 	</footer>
+	<th:block th:fragment="script">
+	<!--Script-->
+	<script src="../js/jquery.min.js"></script>
+	<script src="../js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="../js/popper.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/jquery.easing.1.3.js"></script>
+	<script src="../js/jquery.waypoints.min.js"></script>
+	<script src="../js/jquery.stellar.min.js"></script>
+	<script src="../js/owl.carousel.min.js"></script>
+	<script src="../js/jquery.magnific-popup.min.js"></script>
+	<script src="../js/aos.js"></script>
+	
+	<script src="../js/scrollax.min.js"></script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+	<script src="../js/google-map.js"></script>
+	<script src="../js/main.js"></script>
+	</th:block>
+	
+	
 
 </body>
 
