--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/contact.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/contact.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Contact</title>
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="../css/magnific-popup.css">
-    <link rel="stylesheet" href="../css/aos.css">
-    <link rel="stylesheet" href="../css/ionicons.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
-	<link rel="stylesheet" href="../css/jquery.timepicker.css">
-    <link rel="stylesheet" href="../css/flaticon.css">
-	<link rel="stylesheet" href="../css/icomoon.css">
-	<link rel="stylesheet" href="../css/style.css">
+<head th:include="fragments/userpage :: headerfragment">
+    <title id="pageTitle">Contact</title>
 </head>
 <body>
 <div th:replace="fragments/userpage :: header"></div>
