--- a/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/index.html
+++ b/com.perscholas.poonam.physicianadvisor/src/main/resources/templates/index.html
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<title>Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-
-	<link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-	<link rel="stylesheet" href="../css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/ionicons.min.css">
-    <link rel="stylesheet" href="../css/flaticon.css">
-	<link rel="stylesheet" href="../css/icomoon.css">
-	<link rel="stylesheet" href="../css/style.css">
+<head th:include="fragments/userpage :: headerfragment">
+    <title id="pageTitle">Home</title>
+    	
 </head>
 
 <body>
@@ -202,24 +190,9 @@
 	<div th:replace="fragments/userpage :: subscribe"></div>
 	
 <div th:replace="fragments/userpage :: footer"></div>
+<!--Script-->
+	    <div th:replace="fragments/userpage :: script"></div>
 
-
-	<script src="../js/jquery.min.js"></script>
-	<script src="../js/jquery-migrate-3.0.1.min.js"></script>
-	<script src="../js/popper.min.js"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/jquery.easing.1.3.js"></script>
-	<script src="../js/jquery.waypoints.min.js"></script>
-	<script src="../js/jquery.stellar.min.js"></script>
-	<script src="../js/owl.carousel.min.js"></script>
-	<script src="../js/jquery.magnific-popup.min.js"></script>
-	<script src="../js/aos.js"></script>
-	
-	<script src="../js/scrollax.min.js"></script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-	<script src="../js/google-map.js"></script>
-	<script src="../js/main.js"></script>
 </body>
 
 </html>
